--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>snapdev-generated-app</title>
+    <title>Artori - Artificial Tutor Intelligence</title>
   </head>
 
   <body>
