--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artori - Artificial Tutor Intelligence</title>
+    <link rel="icon" type="image/png" href="/public/favicon.png" />
   </head>
 
   <body>
